--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,14 @@
-aiohttp==3.7.4.post0
-async-timeout==3.0.1
-beautifulsoup4==4.10.0
-certifi==2021.10.8
-cffi==1.15.0
-click==8.0.1
-discord==1.7.3
-discord-components==2.1.2
-discord.py==1.7.3
 
+discord >=1.7.3
+discord-components>=2.1.2
+PyNaCl~=1.5.0
 
-filelock==3.0.12
-Flask==2.0.3
+langcodes>=3.3.0
+language-data>=1.1
+lxml
 
-langcodes==3.3.0
-language-data==1.1
+requests>=2.27.1
+beautifulsoup4~=4.10.0
+typing-extensions>=4.1.1
 
-lxml==4.8.0
-
-Pillow==8.3.2
-pyflakes==2.1.1
-PyNaCl==1.5.0
-requests==2.27.1
-
-typing-extensions==4.1.1
-
-urllib3==1.26.9
-virtualenv==20.7.2
-
-yarg==0.1.9
-yarl==1.7.2
-youtube-dl==2021.12.17
-boto==2.49.0
+youtube-dl==2021.12.17.tar.
