--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 
-git+https://github.com/Rapptz/discord.py
-PyNaCl~=1.5.0
+PyNaCl>=1.5.0
 
 langcodes>=3.3.0
 language-data>=1.1
@@ -12,3 +11,5 @@ typing-extensions>=4.1.1
 
 youtube-dl==2021.12.17
 googletrans>=4.0.0rc1
+
+git+https://github.com/Rapptz/discord.py
