--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ lxml
 
 requests>=2.27.1
 beautifulsoup4~=4.10.0
-typing-extensions>=4.1.1
+typing-extensions
 
 youtube-dl==2021.12.17
 googletrans>=4.0.0rc1
